# Web-Mining

./: .gitignore
project-1/: Parser.py  README.md  VectorSpace.py  main.py  output.txt  pyproject.toml  tfidf.py  util.py
project-2/: .gitignore  pyproject.toml
project-2/sparse_retrieval/: .gitignore  clean.sh  process.sh  run.sh  script.sh
project-2/sparse_retrieval/codes/: build_trecweb_index.sh  main.py  searcher.py
